src/objects/vlocity_ins__CalculationProcedureVariable__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Alias__c</fullName>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationProcedureVersionId__c</fullName>
        <label>Vlocity Calculation Procedure Version</label>
        <referenceTo>vlocity_ins__CalculationProcedureVersion__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Variables</relationshipLabel>
        <relationshipName>CalculationProcedureVariables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DuplicateAlias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Alias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MatrixName__c</fullName>
        <label>Matrix Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Precision__c</fullName>
        <label>Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TypeaheadDisplayName__c</fullName>
        <label>Typeahead Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity Calculation Procedure Variable</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Procedure Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>